--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,7 +225,7 @@ footer {
     height:37px;
 }
 
-.rs-schul {
+.rs-school {
     width:80px;
     height:40px;
 }
@@ -234,7 +234,7 @@ footer {
     position: relative;
 }
 
-.img-wrapper svg {
+.img-wrapper .arrow {
     position: absolute;
     top: 50%;
     left: 50%;
